--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 fastapi==0.96.0
-uvicorn[standard]
-python-multipart
+uvicorn[standard]==0.22.0
+gunicorn==21.2.0
+python-multipart==0.0.6
 Pillow==9.5.0
 torchvision==0.14.0
-opencv-python-headless
+opencv-python-headless==4.5.4.60
 numpy==1.21.6
 craft-text-detector==0.4.3
 matplotlib==3.7.1
 easyocr==1.6.2
 segmentation_models_pytorch==0.3.2
 torch==1.13.0
-zxing-cpp
+zxing-cpp==2.1.0
